[gd_scene load_steps=3 format=3 uid="uid://bfprpusqps54p"]

[ext_resource type="Script" path="res://manager/tutorial_manager.gd" id="1_k1hb0"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_i880p"]
bg_color = Color(0.964706, 0.909804, 0.803922, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.0235294, 0.054902, 0.0901961, 1)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2
anti_aliasing = false

[node name="TutorialManager" type="Node" groups=["tutorial_manager"]]
process_mode = 3
script = ExtResource("1_k1hb0")

[node name="TutorialScreen" type="CanvasLayer" parent="."]
layer = 2
offset = Vector2(0, 200)
transform = Transform2D(1, 0, 0, 1, 0, 200)

[node name="TextBoxMarginContainer" type="MarginContainer" parent="TutorialScreen"]
custom_minimum_size = Vector2(400, 80)
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -100.0
offset_top = -47.0
offset_right = 300.0
offset_bottom = 45.0
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(0.5, 0.5)
size_flags_horizontal = 4
size_flags_vertical = 8
theme_override_constants/margin_left = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="TextBox" type="Panel" parent="TutorialScreen/TextBoxMarginContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_i880p")

[node name="TextMarginContainer" type="MarginContainer" parent="TutorialScreen/TextBoxMarginContainer"]
layout_mode = 2
size_flags_vertical = 8
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="TutorialText" type="Label" parent="TutorialScreen/TextBoxMarginContainer/TextMarginContainer"]
custom_minimum_size = Vector2(350, 50)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme_override_colors/font_color = Color(0.0235294, 0.054902, 0.0901961, 1)
theme_override_constants/line_spacing = -2
theme_override_constants/outline_size = 0
text = "one line here"
vertical_alignment = 1
autowrap_mode = 2
